// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a loading screen 1`] = `
<div
  data-testid="loading"
>
  Loading...
</div>
`;

exports[`it renders an error screen 1`] = `
<div
  data-testid="error"
>
  Oops, something went wrong.
</div>
`;

exports[`it renders the customers table when loaded 1`] = `
<table
  class="MuiTable-root"
  data-testid="customers-table"
>
  <thead
    class="MuiTableHead-root"
  >
    <tr
      class="MuiTableRow-root MuiTableRow-head"
    >
      <th
        class="MuiTableCell-root MuiTableCell-head WithStyles(ForwardRef(TableCell))-head-1"
        scope="col"
      >
        First Name
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head WithStyles(ForwardRef(TableCell))-head-1"
        scope="col"
      >
        Last Name
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head WithStyles(ForwardRef(TableCell))-head-1"
        scope="col"
      >
        Company Name
      </th>
    </tr>
  </thead>
  <tbody
    class="MuiTableBody-root"
  >
    <tr
      class="MuiTableRow-root"
    >
      <td
        class="MuiTableCell-root MuiTableCell-body"
      >
        Dougy
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body"
      >
        Pauly
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body"
      >
        New Relic
      </td>
    </tr>
  </tbody>
</table>
`;
